# voxel

./: .gitignore  CMakeLists.txt  README.md
include/: buffer.h  chunk.h  common.h  control.h  cross.h  cube.h  draw.h  event.h  list.h  log.h  map.h  matrix.h  player.h  renderer.h  shader.h  stb_image.h  texture.h  timer.h  window.h
include/core/: buffer.h  common.h  control.h  event.h  log.h  renderer.h  shader.h  timer.h  window.h
shaders/: cross.fs  cross.vs  cube.fs  cube.vs  fragment.fs  vertex.vs
src/: buffer.c  chunk.c  common.c  common.h  control.c  control.h  cross.c  cube.c  draw.c  draw.h  event.c  event.h  list.c  log.c  log.h  main.c  map.c  map.h  matrix.c  matrix.h  noise.c  noise.h  opengl.h  player.c  player.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  timer.c  window.c  window.h
src/core/: common.c  control.c  event.c  log.c  renderer.c  shader.c  timer.c  window.c
